--- a/webpage/index.html
+++ b/webpage/index.html
@@ -15,22 +15,47 @@
     <div class="container" id="app">
 
       <results-list inline-template>
+        <div id="posts">
 
-          <div id="posts" class="card-deck">
-              <div class="col-sm-6 col-md-4 col-lg-3" v-for="(post, index) in posts" v-if="!post.is_self">
-                  <div class="mb4 card">
-                    <img class="card-img-top" v-bind:src="post.thumbnail" />
-                    <div class="card-body">
-                      <div class="card-title">{{post.title}}</div>
-                    </div>
-                    <div class="card-footer">
-                      <small class="text-muted">{{post.created}}</small>
-                      <small class="text-muted">{{post.author}}</small>
+          <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item w-100" v-for="(post, index) in posts" :class="{ 'active': index === 0 }">
+                <img v-bind:src="post.url"/>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div> -->
+
+
+          <div class="card-deck">
+            <div class="col-sm-6 col-md-6 col-lg-4" v-for="(post, index) in posts" v-if="!post.is_self">
+                <div class="mb-4 card">
+                    <a v-bind:href="post.url" target="_blank"><img class="card-img-top" v-bind:src="post.thumbnail" /></a>
+                  <div class="card-body">
+                    <div class="card-title">{{post.title}}</div>
+                  </div>
+                  <div class="card-footer">
+                    <div class="row">
+                      <a v-bind:href="post.id | formatURL" target="_blank">
+                        <small class="col text-muted">{{post.created | formatDate}}</small>
+                        <small class="col text-muted">From: {{post.author}}</small>
+                      </a>
                     </div>
                   </div>
                 </div>
-          </div>
-          
+              </div>
+            </div>
+
+
+        </div>
+
       </results-list>
 
     </div>
