--- a/webpage/index.html
+++ b/webpage/index.html
@@ -7,10 +7,12 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-vue@2.0.0-rc.11/dist/bootstrap-vue.css"/>
 
+    <link rel="stylesheet" href="css/redditaww.css"/>
+
+
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap-vue@2.0.0-rc.11/dist/bootstrap-vue.min.js"></script>
   </head>
@@ -42,12 +44,10 @@
             <div class="col-sm-6 col-md-6 col-lg-4" v-for="(post, index) in filtered(posts)">
 
                 <div class="mb-4 card" @click="updateSlide(index)">
-                  <!-- <b-container v-b-modal.modal1> -->
                     <img class="card-img-top" v-bind:src="post.thumbnail"/>
                     <div class="card-body" data-toggle="modal" data-target="#exampleModal">
                       <div class="card-title">{{post.title}}</div>
                     </div>
-                  <!-- </b-container> -->
 
                   <div class="card-footer">
                     <div class="row">
