Use v-show for faster filtering

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -25,7 +25,7 @@
       <results-list inline-template>
         <div id="posts">
 
-          <!-- <div class="d-flex justify-content-center">
+          <div class="d-flex justify-content-center">
               <div class="col-xs-4">
                 <b-form-checkbox-group v-model="selected"
                                        buttons
@@ -52,10 +52,10 @@
                 </b-form-checkbox-group>
 
               </div>
-        </div> -->
+        </div>
 
           <div class="card-deck">
-            <div class="col-sm-6 col-md-6 col-lg-4" v-for="(post, index) in filtered(posts)">
+            <div class="col-sm-6 col-md-6 col-lg-4" v-for="(post, index) in posts" v-show="checkShow(post)">
 
                   <b-card v-bind:img-src="post.thumbnail"
                           img-top
@@ -91,7 +91,7 @@
                   v-model="value"
                   controls >
 
-                  <b-carousel-slide ref="carouselSlide" v-for ="(post, index) in filtered(posts)" :key="post.id" v-bind:id="post.id" v-bind:img-src="post.url | formatPostURL">
+                  <b-carousel-slide ref="carouselSlide" v-for ="(post, index) in posts" :key="post.id" v-bind:id="post.id" v-bind:img-src="post.url | formatPostURL">
                   </b-carousel-slide>
                 </b-carousel>
 
